Refactor stateful "controller" classes to stateless factory classes