@@ -1,6 +1,5 @@
 package com.cube.storm.ui.controller.adapter;
 
-import android.content.Context;
 import android.support.annotation.NonNull;
 import android.support.annotation.Nullable;
 import android.support.v7.widget.RecyclerView;
@@ -16,7 +15,7 @@ import com.cube.storm.ui.model.list.List.ListFooter;
 import com.cube.storm.ui.model.list.List.ListHeader;
 import com.cube.storm.ui.view.holder.GridViewHolder;
 import com.cube.storm.ui.view.holder.ViewHolder;
-import com.cube.storm.ui.view.holder.ViewHolderController;
+import com.cube.storm.ui.view.holder.ViewHolderFactory;
 
 import java.util.ArrayList;
 import java.util.Collection;
@@ -25,9 +24,9 @@ import java.util.Collection;
  * The base adapter used for displaying Storm views in a list. Using an adapter to do such a task has
  * the benefit of view recycling which makes the content smooth to scroll.
  *
- * This adapter only supports {@link com.cube.storm.ui.model.Model} classes which have a defined {@link com.cube.storm.ui.view.holder.ViewHolder} counter-class.
+ * This adapter only supports {@link com.cube.storm.ui.model.Model} classes which have a defined {@link ViewHolder} counter-class.
  *
- * This adapter only supports {@link com.cube.storm.ui.model.Model} classes which have a defined {@link com.cube.storm.ui.view.holder.ViewHolder} counter-class.
+ * This adapter only supports {@link com.cube.storm.ui.model.Model} classes which have a defined {@link ViewHolder} counter-class.
  *
  * <b>Usage</b>
  * <p/>
@@ -49,7 +48,7 @@ public class StormListAdapter extends RecyclerView.Adapter<ViewHolder<?>>
 	 * in this list, the models have to be traversed in order to build the 1 dimensional list for the
 	 * adapter to work correctly.
 	 */
-	private ArrayList<Model> items = new ArrayList<Model>();
+	private ArrayList<Model> items = new ArrayList<>();
 
 	/**
 	 * The different unique item types. This is used to tell the adapter how many unique views we're
@@ -57,23 +56,19 @@ public class StormListAdapter extends RecyclerView.Adapter<ViewHolder<?>>
 	 * convenience, the object type in the list is a reference to the view holder class we will use
 	 * to render said view.
 	 */
-	private ArrayList<Class<? extends com.cube.storm.ui.view.holder.ViewHolderController>> itemTypes = new ArrayList<Class<? extends ViewHolderController>>();
+	private ArrayList<Class<? extends ViewHolderFactory>> itemTypes = new ArrayList<>();
 
-	private Context context;
-
-	public StormListAdapter(Context context)
+	public StormListAdapter()
 	{
-		this.context = context;
 	}
 
-	public StormListAdapter(Context context, Collection<? extends Model> items)
+	public StormListAdapter(Collection<? extends Model> items)
 	{
-		this.context = context;
 		setItems(items);
 	}
 
 	/**
-	 * Sets the items in the collection. Filters out any model that does not have a defined {@link com.cube.storm.ui.view.holder.ViewHolder}
+	 * Sets the items in the collection. Filters out any model that does not have a defined {@link ViewHolder}
 	 *
 	 * @param items The new items to set. Can be null to clear the list.
 	 */
@@ -81,8 +76,8 @@ public class StormListAdapter extends RecyclerView.Adapter<ViewHolder<?>>
 	{
 		if (items != null)
 		{
-			this.items = new ArrayList<Model>(items.size());
-			this.itemTypes = new ArrayList<Class<? extends ViewHolderController>>(items.size() / 2);
+			this.items = new ArrayList<>(items.size());
+			this.itemTypes = new ArrayList<>(items.size() / 2);
 
 			for (Model item : items)
 			{
@@ -91,8 +86,8 @@ public class StormListAdapter extends RecyclerView.Adapter<ViewHolder<?>>
 		}
 		else
 		{
-			this.items = new ArrayList<Model>(0);
-			this.itemTypes = new ArrayList<Class<? extends ViewHolderController>>(0);
+			this.items = new ArrayList<>(0);
+			this.itemTypes = new ArrayList<>(0);
 		}
 	}
 
@@ -154,7 +149,7 @@ public class StormListAdapter extends RecyclerView.Adapter<ViewHolder<?>>
 		}
 		else
 		{
-			Class<? extends ViewHolderController> holderClass = UiSettings.getInstance().getViewFactory().getHolderForView(item.getClassName());
+			Class<? extends ViewHolderFactory> holderClass = UiSettings.getInstance().getViewFactory().getHolderForView(item.getClassName());
 
 			if (holderClass != null)
 			{
@@ -175,7 +170,7 @@ public class StormListAdapter extends RecyclerView.Adapter<ViewHolder<?>>
 
 	@Override public long getItemId(int position)
 	{
-		return ((Object)getItem(position)).hashCode();
+		return getItem(position).hashCode();
 	}
 
 	@Override public int getItemCount()
@@ -185,22 +180,22 @@ public class StormListAdapter extends RecyclerView.Adapter<ViewHolder<?>>
 
 	@Override public ViewHolder<?> onCreateViewHolder(ViewGroup viewGroup, int viewType)
 	{
-		ViewHolderController holder = null;
+		ViewHolder<?> holder;
 
 		try
 		{
-			holder = itemTypes.get(viewType).newInstance();
-			holder.createViewHolder(viewGroup);
+			ViewHolderFactory holderFactory = itemTypes.get(viewType).getConstructor().newInstance();
+			holder = holderFactory.createViewHolder(viewGroup);
 		}
 		catch (Exception e)
 		{
-			throw new InstantiationError("Could not instantiate a new holder" + e.getMessage());
+			throw new IllegalStateException("Could not instantiate a new holder" + e.getMessage(), e);
 		}
 
-		return (ViewHolder<?>)holder.getViewHolder();
+		return holder;
 	}
 
-	@Override public void onBindViewHolder(com.cube.storm.ui.view.holder.ViewHolder viewHolder, int position)
+	@Override public void onBindViewHolder(ViewHolder viewHolder, int position)
 	{
 		try
 		{
